# photo-exifparse

./: Cargo.toml  README.md
src/: exif.rs  imghandle.rs  imghandle1.rs  lib.rs  main.rs
src/cpp/: CMakeLists.txt  ImgHandel.cpp
src/turbojpg/: Cargo.toml
