[package]
name = "imagetest"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
rayon = "1.10.0"
anyhow = "1.0.93"
fast_image_resize = "5.0.0"
turbojpeg = {version = "1.1.1", features = ["image"]}

[profile.release]
debug = false
opt-level = "z"  # 设置更高的优化级别
lto = true       # 启用链接时间优化（Link Time Optimization）